# tripadvisor-hotel-reviews-topic-modeling

./: .cruft.json  .dockerignore  .drone.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/: pull_request_template.md
docs/: CONTRIBUTING.md  Dockerfile  conf.py  index.md
docs/_static/: custom.css
docs/contributing_guide/: drone_k8_deployment.md  pre_commit_hooks.md  project_conventions.md  writing_technical_documentation.md
docs/reference/: reference.md
docs/user_guide/: assumptions_and_caveats.md  data_log.md  setting_up_your_ide.md  specifying_python_version_for_poetry.md  user_guide.md
k8s/: deployment.yml  ingress.yml  kustomization.yml  service.yml
notebooks/: bert_topic.ipynb
src/tripadvisor_hotel_reviews_topic_modeling/: __init__.py  bert_topic.py  data_processing.py
src/tripadvisor_hotel_reviews_topic_modeling/utils/: file_handler.py
